# Thesis_project

./: .gitattributes  .gitignore  CMakeLists.txt  OBservations and problems within the code  README.txt  benchmarking.sh  gen_csv_benchmarking_time.sh  gen_csv_benchmarking_time2.sh  investigating_tau.sh  ss_vs_ms.m  ss_vs_ms.sh  tuning_e_qub.sh
applications/: CMakeLists.txt  OCP.cpp  hello.cpp  test.cpp  test2.cpp  test3.cpp  test_AD.cpp  test_alm_AD.cpp  test_para_panoc_helpers.cpp  test_sls.cpp  test_tau_GN.cpp  tests.cpp  tests_alm.cpp  tests_benchmarking.cpp  tests_parallel_efficiency.cpp  tests_ss_vs_ms.cpp  tests_tuning_solver.cpp
benchmark-problems/: .gitignore  pyproject.toml
benchmark-problems/cpp/: CMakeLists.txt  driver.cpp  ocp-problem-loader.cpp  ocp-problem-loader.hpp  problem-loader.cpp  problem-loader.hpp
benchmark-problems/python/nicholas_benchmark_problems/formulations/: ms.py  ocp.py  ss.py
benchmark-problems/python/nicholas_benchmark_problems/problems/: __init__.py  hermans_bicycle.py  quadcopter.py
benchmark-problems/python/test/: test_ocproblem.py
benchmark-problems/python/util/: generate_problem.py
benchmarking_time/: benchmarking_time.ofig  output.csv  post_processing.m
benchmarking_time_GN/: final_output.csv  output.csv  output1.csv  output2.csv  post_processing2.m
cmake/: Warnings.cmake
installation/include/: KokkosCore_config.h  Sacado_config.h  TeuchosCore_config.h  Teuchos_config.h  Trilinos_version.h  Trilinos_version_date.h  alpaqa-version.h
investigating_tau_GN/NonlinearOCP1b/: results_NonlinearOCP1b_30_4_10_ms.csv  results_NonlinearOCP1b_30_4_11_ms.csv  results_NonlinearOCP1b_30_4_2_ms.csv  results_NonlinearOCP1b_30_4_3_ms.csv  results_NonlinearOCP1b_30_4_4_ms.csv  results_NonlinearOCP1b_30_4_5_ms.csv  results_NonlinearOCP1b_30_4_6_ms.csv  results_NonlinearOCP1b_30_4_7_ms.csv  results_NonlinearOCP1b_30_4_8_ms.csv  results_NonlinearOCP1b_30_4_9_ms.csv  stats_NonlinearOCP1b_30_10_ss.csv  stats_NonlinearOCP1b_30_11_ss.csv  stats_NonlinearOCP1b_30_2_ss.csv  stats_NonlinearOCP1b_30_3_ss.csv  stats_NonlinearOCP1b_30_4_ss.csv  stats_NonlinearOCP1b_30_5_ss.csv  stats_NonlinearOCP1b_30_6_ss.csv  stats_NonlinearOCP1b_30_7_ss.csv  stats_NonlinearOCP1b_30_8_ss.csv  stats_NonlinearOCP1b_30_9_ss.csv
investigating_tau_lbfgs/HangingChain/: results_HangingChain_30_4_10111_ms.csv  results_HangingChain_30_4_11111_ms.csv  results_HangingChain_30_4_2_ms.csv  results_HangingChain_30_4_3_ms.csv  results_HangingChain_30_4_4_ms.csv  results_HangingChain_30_4_5_ms.csv  results_HangingChain_30_4_6111_ms.csv  results_HangingChain_30_4_7111_ms.csv  results_HangingChain_30_4_8111_ms.csv  results_HangingChain_30_4_9111_ms.csv  stats_HangingChain_30_10111_ss.csv  stats_HangingChain_30_11111_ss.csv  stats_HangingChain_30_2_ss.csv  stats_HangingChain_30_3_ss.csv  stats_HangingChain_30_4_ss.csv  stats_HangingChain_30_5_ss.csv  stats_HangingChain_30_6111_ss.csv  stats_HangingChain_30_7111_ss.csv  stats_HangingChain_30_8111_ss.csv  stats_HangingChain_30_9111_ss.csv
investigating_tau_lbfgs/MultiRTAC/: results_MultiRTAC_40_4_10_ms.csv  results_MultiRTAC_40_4_11_ms.csv  results_MultiRTAC_40_4_2_ms.csv  results_MultiRTAC_40_4_3_ms.csv  results_MultiRTAC_40_4_4_ms.csv  results_MultiRTAC_40_4_5_ms.csv  results_MultiRTAC_40_4_6_ms.csv  results_MultiRTAC_40_4_7_ms.csv  results_MultiRTAC_40_4_8_ms.csv  results_MultiRTAC_40_4_9_ms.csv  stats_MultiRTAC_40_10_ss.csv  stats_MultiRTAC_40_11_ss.csv  stats_MultiRTAC_40_2_ss.csv  stats_MultiRTAC_40_3_ss.csv  stats_MultiRTAC_40_4_ss.csv  stats_MultiRTAC_40_5_ss.csv  stats_MultiRTAC_40_6_ss.csv  stats_MultiRTAC_40_7_ss.csv  stats_MultiRTAC_40_8_ss.csv  stats_MultiRTAC_40_9_ss.csv
investigating_tau_lbfgs/Nagumo/: results_Nagumo_40_4_101_ms.csv  results_Nagumo_40_4_111_ms.csv  results_Nagumo_40_4_21_ms.csv  results_Nagumo_40_4_31_ms.csv  results_Nagumo_40_4_41_ms.csv  results_Nagumo_40_4_51_ms.csv  results_Nagumo_40_4_61_ms.csv  results_Nagumo_40_4_71_ms.csv  results_Nagumo_40_4_81_ms.csv  results_Nagumo_40_4_91_ms.csv  stats_Nagumo_40_101_ss.csv  stats_Nagumo_40_111_ss.csv  stats_Nagumo_40_21_ss.csv  stats_Nagumo_40_31_ss.csv  stats_Nagumo_40_41_ss.csv  stats_Nagumo_40_51_ss.csv  stats_Nagumo_40_61_ss.csv  stats_Nagumo_40_71_ss.csv  stats_Nagumo_40_81_ss.csv  stats_Nagumo_40_91_ss.csv
investigating_tau_lbfgs/NonlinearOCP1b/: results_NonlinearOCP1b_30_4_10_ms.csv  results_NonlinearOCP1b_30_4_11_ms.csv  results_NonlinearOCP1b_30_4_2_1_ms.csv  results_NonlinearOCP1b_30_4_3_ms.csv  results_NonlinearOCP1b_30_4_4_ms.csv  results_NonlinearOCP1b_30_4_5_ms.csv  results_NonlinearOCP1b_30_4_6_ms.csv  results_NonlinearOCP1b_30_4_7_ms.csv  results_NonlinearOCP1b_30_4_8_ms.csv  results_NonlinearOCP1b_30_4_9_ms.csv  stats_NonlinearOCP1b_30_10_ss.csv  stats_NonlinearOCP1b_30_11_ss.csv  stats_NonlinearOCP1b_30_2_ss.csv  stats_NonlinearOCP1b_30_3_ss.csv  stats_NonlinearOCP1b_30_4_ss.csv  stats_NonlinearOCP1b_30_5_ss.csv  stats_NonlinearOCP1b_30_6_ss.csv  stats_NonlinearOCP1b_30_7_ss.csv  stats_NonlinearOCP1b_30_8_ss.csv  (+1 more)
problems/: CMakeLists.txt  hanging_chain.hpp  linear_dynamics.hpp  multi-RTAC.hpp  nagumo_schlogl.hpp  nagumo_schlogl_ws.hpp  nonlinear_dynamics.hpp  nonlinear_example1.hpp  quadcopter.hpp  quadcopter_AD.hpp  quadcopter_full.hpp  time-discretization.hpp
src/: CMakeLists.txt  para-panoc.cpp
src/include/Thesis/: Thesis.hpp  gn-ms.hpp  ocp-funcs.hpp  para-alm.hpp  para-box.hpp  para-panoc-alm.hpp  para-panoc-helpers.hpp  para-panoc.hpp  para-type-erased-problem.hpp  printing.hpp
src/include/thesis/: auto-diff-sacado-helpers.hpp  ms-accelerators.hpp  ocp-kkt-error.hpp  para-alm.hpp  para-lbfgs.hpp  para-panoc-helpers.hpp  para-panoc.hpp  printing.hpp  sparse-linear-solver.hpp
src/src/: Thesis.cpp  para-alm.cpp  para-panoc-alm.cpp  para-panoc.cpp  para-panoc.tpp  thesis.cpp
ss_vs_ms/: ss_vs_ms.m  stats_MultiRTAC__ms.csv  stats_MultiRTAC__ss.csv  stats_NonlinearOCP1b__ms.csv  stats_NonlinearOCP1b__ss.csv  stats_QuadcopterFull__ms.csv  stats_QuadcopterFull__ss.csv
toolchains/: x86_64-linux-gcc8.cmake
(+128 files in other folders)
