[build-system]
requires = ["py-build-cmake~=0.1.1"]
build-backend = "py_build_cmake.build"

[project]
name = "nicholas-benchmark-problems"
readme = "README.md"
requires-python = ">=3.9"
license = { "file" = "LICENSE" }
authors = [{ "name" = "Pieter P", "email" = "pieter.p.dev@outlook.com" }]
keywords = ["alpaqa"]
classifiers = []
dependencies = [
    "numpy", "casadi", "alpaqa~=1.0.0a7"
]
dynamic = ["version", "description"]

[project.urls]
Source = "https://github.com/tttapa/nicholas-benchmark-problems"
Documentation = "https://tttapa.github.io/nicholas-benchmark-problems"
Tracker = "https://github.com/tttapa/nicholas-benchmark-problems/issues"

[tool.py-build-cmake.module]
name = "nicholas_benchmark_problems"
directory = "python"

[tool.pytest.ini_options]
testpaths = ["python/test"]
